--- a/navbar_login_signup_modals.html
+++ b/navbar_login_signup_modals.html
@@ -3,18 +3,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Meta Tags -->
+<!-- Meta Tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Icons -->
+<!-- Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	<!-- Bootstrap CSS -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<!-- Custom CSS -->
+<!-- Bootstrap CSS -->
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">	<!-- Custom CSS -->
+<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<!-- Jquery -->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-	        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!-- Jquery -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!-- Dynamic Page Title -->
 	<title><?php echo $page_title; ?></title>
 </head>
 <body>
@@ -156,7 +156,7 @@
 <!-- FOOTER -->
 
 <!-- Bootstrap JS -->
-	<script src="js/bootstrap.bundle.min.js"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
 
